Add wifi drivers & Ap connected codes

--- a/WiFi_AWS_Iot.ioc
+++ b/WiFi_AWS_Iot.ioc
@@ -4,9 +4,10 @@ KeepUserPlacement=false
 Mcu.Family=STM32L4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP2=SPI3
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -62,14 +63,17 @@ PB7.Signal=USART1_RX
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=ISM43362_SCK
 PC10.Locked=true
+PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=GPIO_Label
 PC11.GPIO_Label=ISM43362_MISO
 PC11.Locked=true
+PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=ISM43362_MOSI
 PC12.Locked=true
+PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -165,6 +169,11 @@ RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SPI3.CalculateBaudRate=40.0 MBits/s
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
